<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Eden</string>
    <string name="app_disclaimer">This software will run games for the Nintendo Switch game console. No game titles or keys are included.&lt;br /&gt;&lt;br /&gt;Before you begin, please locate your <![CDATA[<b> prod.keys </b>]]> file on your device storage.&lt;br /&gt;&lt;br /&gt;<![CDATA[<a href=\"https://yuzu-mirror.github.io/help/quickstart\">Learn more</a>]]></string>
    <string name="notice_notification_channel_name">Notices and errors</string>
    <string name="notice_notification_channel_id" translatable="false">noticesAndErrors</string>
    <string name="notice_notification_channel_description">Shows notifications when something goes wrong.</string>
    <string name="notification_permission_not_granted">Notification permission not granted!</string>
    <string name="app_notification_channel_name" translatable="false">Eden</string>
    <string name="app_notification_channel_id" translatable="false">Eden</string>
    <string name="app_notification_channel_description">Eden Switch emulator notifications</string>
    <string name="app_notification_running">Eden is Running</string>
    <string name="seconds">Seconds</string>
    <string name="increment">Increment</string>
    <string name="decrement">Decrement</string>
    <string name="value_too_low">Value must be at least %1$d</string>
    <string name="value_too_high">Value must be at most %1$d</string>
    <string name="invalid_value">Invalid value</string>
    <string name="using_per_game_config">Using Per-Game Config</string>
    <string name="show_input_overlay">Show Input Overlay</string>
    <string name="show_input_overlay_description">Display touch controls overlay during emulation</string>
    <string name="overlay_snap_to_grid">Snap to Grid</string>
    <string name="overlay_snap_to_grid_description">Snap overlay controls to a grid when editing</string>
    <string name="overlay_grid_size">Grid Size</string>
    <string name="overlay_grid_size_description">Size of the grid cells in pixels</string>
    <string name="input_overlay_behavior">Behavior</string>
    <string name="overlay_auto_hide">Overlay Auto Hide</string>
    <string name="overlay_auto_hide_description">Automatically hide the touch controls overlay after the specified time of inactivity.</string>
    <string name="enable_input_overlay_auto_hide">Enable Overlay Auto Hide</string>
    <string name="hide_overlay_on_controller_input">Hide Overlay on Controller Input</string>
    <string name="hide_overlay_on_controller_input_description">Automatically hide the touch controls overlay when a physical controller is used. Overlay reappears when controller is disconnected.</string>
    <string name="invert_confirm_back_controller_buttons">Invert Confirm/Back Controller Buttons</string>
    <string name="invert_confirm_back_controller_buttons_description">Swap Android Confirm and Back button handling to match both Switch and Xbox styles while using the app UI.</string>
    <string name="input_overlay_options">Input Overlay</string>
    <string name="input_overlay_options_description">Configure on-screen controls</string>
    <string name="edit_overlay_layout">Edit Overlay Layout</string>
    <string name="edit_overlay_layout_description">Adjust the position and scale of on-screen controls</string>
    <string name="overlay_theme">Custom Overlay Theme</string>
    <string name="overlay_theme_description">Load a .zip of overlay artwork. background.png is drawn behind the game.</string>
    <string name="overlay_theme_pick">Choose Theme…</string>
    <string name="overlay_theme_clear">Reset to default</string>
    <string name="overlay_theme_picker_title">Custom Overlay Theme</string>
    <string name="overlay_theme_picker_description">Pick a .zip file containing overlay artwork. background.png, if present, becomes the game background layer.</string>
    <string name="overlay_theme_status_none">No custom theme</string>
    <string name="overlay_theme_status_none_detail">The bundled default assets are in use.</string>
    <string name="overlay_theme_status_active">Custom theme active</string>
    <string name="overlay_theme_status_active_detail">%1$d asset file(s) loaded. Background image: %2$s.</string>
    <string name="overlay_theme_installing">Installing…</string>
    <string name="overlay_theme_install_failed">Failed to install theme. Check the zip is valid.</string>
    <string name="overlay_theme_install_ok">Theme installed (%1$d files).</string>
    <string name="overlay_theme_cleared">Theme reset to default.</string>
    <string name="overlay_theme_yes">yes</string>
    <string name="overlay_theme_no">no</string>
    <string name="process_ram">Process RAM: %1$d MB</string>
    <string name="shaders_prefix">Building</string>
    <string name="shaders_suffix">Shader(s)</string>
    <string name="charging">(Charging)</string>
    <string name="system_info_label">System:</string>
    <string name="show_stats_overlay">Show Performance Stats Overlay</string>
    <string name="stats_overlay_customization">Customization</string>
    <string name="stats_overlay_items">Visibility</string>
    <string name="stats_overlay_options">Performance Overlay</string>
    <string name="enable_stats_overlay_">Enable Performance Stats Overlay</string>
    <string name="stats_overlay_options_description">Configure what information is shown in the performance stats overlay</string>
    <string name="show_fps">Show FPS</string>
    <string name="show_fps_description">Display current frames per second</string>
    <string name="show_frametime">Show Frametime</string>
    <string name="show_app_ram_usage">Show App Memory Usage</string>
    <string name="show_app_ram_usage_description">Display the amount of RAM the emulator is using</string>
    <string name="show_system_ram_usage">Show System Memory Usage</string>
    <string name="show_system_ram_usage_description">Display the amount of RAM used by the system</string>
    <string name="show_bat_temperature">Show Battery Temperature</string>
    <string name="bat_temperature_unit">Battery Temperature Units</string>
    <string name="show_power_info">Show Battery Info</string>
    <string name="show_power_info_description">Display current power draw and remaining capacity on battery</string>
    <string name="show_shaders_building">Show Shaders Building</string>
    <string name="show_shaders_building_description">Display current number of shaders being built</string>
    <string name="pipeline_worker_cores">Pipeline Worker Threads</string>
    <string name="pipeline_worker_cores_description">Manage the amount of cores used for building Vulkan pipelines, the higher value will improve pipeline compilation performance but temperatures will increase as well.</string>
    <string name="overlay_position">Overlay Position</string>
    <string name="overlay_position_description">Choose where the overlay is displayed on the screen</string>
    <string name="overlay_position_top_left">Top Left</string>
    <string name="overlay_position_top_right">Top Right</string>
    <string name="overlay_position_bottom_left">Bottom Left</string>
    <string name="overlay_position_bottom_right">Bottom Right</string>
    <string name="overlay_position_center_top">Center Top</string>
    <string name="overlay_position_center_bottom">Center Bottom</string>
    <string name="perf_overlay_background">Overlay Background</string>
    <string name="perf_overlay_background_description">Adds a background behind the overlay for easier reading</string>
    <string name="show_soc_overlay">Show Device Info Overlay</string>
    <string name="enable_soc_overlay">Enable Device Overlay</string>
    <string name="soc_overlay_options">Device Overlay</string>
    <string name="soc_overlay_options_description">Configure what information is shown in the device overlay</string>
    <string name="show_build_id">Show Build ID</string>
    <string name="show_driver_version">Show Driver Version</string>
    <string name="show_device_model">Show Device Model</string>
    <string name="show_gpu_model">Show GPU Model</string>
    <string name="show_soc_model">Show SoC Model</string>
    <string name="show_fw_version">Show Firmware Version</string>
    <string name="buffer_reorder_disable">Disable Buffer Reorder</string>
    <string name="buffer_reorder_disable_description">When checked, disables reordering of mapped memory uploads which allows to associate uploads with specific draws. May reduce performance in some cases.</string>
    <string name="use_sync_core">Synchronize Core Speed</string>
    <string name="use_sync_core_description">Synchronize the core tick speed to the maximum speed percentage to improve performance without altering the game\'s actual speed.</string>
    <string name="cpuopt_unsafe_host_mmu">Enable Host MMU Emulation</string>
    <string name="cpuopt_unsafe_host_mmu_description">This optimization speeds up memory accesses by the guest program. Enabling it causes guest memory reads/writes to be done directly into memory and make use of Host\'s MMU. Disabling this forces all memory accesses to use Software MMU Emulation.</string>
    <string name="debug_knobs">Debug knobs</string>
    <string name="debug_knobs_description">For development use only.</string>
    <string name="debug_knobs_hint">0 to 65535</string>
    <string name="nvdec_emulation">NVDEC Emulation</string>
    <string name="nvdec_emulation_description">Select how video decoding (NVDEC) is handled during cutscenes and intros.</string>
    <string name="nvdec_emulation_cpu" translatable="false">CPU</string>
    <string name="nvdec_emulation_gpu" translatable="false">GPU</string>
    <string name="nvdec_emulation_none">None</string>
    <string name="never">Never</string>
    <string name="on_load">On Load</string>
    <string name="always">Always</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="multiplayer_description">Host your own game room or join an existing one to play with people</string>
    <string name="multiplayer_create_room">Create</string>
    <string name="multiplayer_join_room">Join</string>
    <string name="multiplayer_public_room">Browse Public Rooms</string>
    <string name="multiplayer_username">Username</string>
    <string name="multiplayer_ip_address">IP Address</string>
    <string name="multiplayer_ip_port">Port</string>
    <string name="multiplayer_create_room_success">Room created successfully</string>
    <string name="multiplayer_join_room_success">Joined room successfully</string>
    <string name="multiplayer_exit_room">Exit Room</string>
    <string name="multiplayer_network_error">Network error</string>
    <string name="multiplayer_lost_connection">Lost connection</string>
    <string name="multiplayer_name_collision">Username already taken</string>
    <string name="multiplayer_mac_collision">MAC Address collision</string>
    <string name="multiplayer_console_id_collision">Console ID collision</string>
    <string name="multiplayer_wrong_version">Wrong version</string>
    <string name="multiplayer_wrong_password">Wrong password</string>
    <string name="multiplayer_could_not_connect">Could not connect</string>
    <string name="delete">Delete</string>
    <string name="combo_manager_description">Toggle visibility, add custom combos or load a built-in preset. In the overlay editor, drag a combo pad to reposition; tap it to edit.</string>
    <string name="combo_manager_load_preset">Load preset</string>
    <string name="combo_manager_add_new">Add combo</string>
    <string name="combo_editor_name_hint">Display name (shown on the combo pad)</string>
    <string name="combo_editor_buttons_label">Buttons pressed together (pick 2-8)</string>
    <string name="combo_editor_enabled_label">Enabled (shown on overlay)</string>
</resources>